<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.javaquiz.results">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/correct_answers_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/datalatin"
            android:padding="20dp"
            android:text="@string/the_answers"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/correct_answers_textview"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:paddingTop="20dp"
                android:text="@string/question1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingEnd="20dp"
                    android:text="@string/b1"
                    android:textColor="@color/correct"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/c1"
                    android:textColor="@color/correct"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:paddingTop="20dp"
                android:text="@string/question2"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingEnd="20dp"
                android:text="@string/b2"
                android:textColor="@color/correct"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:paddingTop="20dp"
                android:text="@string/question3"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingEnd="20dp"
                android:text="@string/d3"
                android:textColor="@color/correct"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:paddingTop="20dp"
                android:text="@string/question4"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingEnd="20dp"
                android:text="@string/a4"
                android:textColor="@color/correct"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:paddingTop="20dp"
                android:text="@string/question5"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingEnd="20dp"
                android:text="@string/d5"
                android:textColor="@color/correct"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:paddingTop="20dp"
                android:text="@string/question6"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingEnd="20dp"
                android:text="@string/a6"
                android:textColor="@color/correct"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:paddingTop="20dp"
                android:text="@string/question7"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="30dp"
                android:paddingStart="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingEnd="20dp"
                    android:text="@string/a7"
                    android:textColor="@color/correct"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/b7"
                    android:textColor="@color/correct"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:paddingTop="20dp"
                android:text="@string/question8"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingEnd="20dp"
                android:text="@string/d8"
                android:textColor="@color/correct"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:paddingTop="20dp"
                android:text="@string/question9"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingEnd="20dp"
                android:text="@string/d9"
                android:textColor="@color/correct"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:paddingTop="20dp"
                android:text="@string/question10"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingEnd="20dp"
                android:text="@string/answer_10"
                android:textColor="@color/correct"
                android:textSize="15sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorPrimary"
                android:onClick="onClick"
                android:text="@string/your_score" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>