<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.javaquiz.seventh_question">

    <TextView
        android:id="@+id/seven_out_of_ten_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/datalatin"
        android:padding="30dp"
        android:text="@string/q7"
        android:textAlignment="center"
        android:textColor="#D50000"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/question_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seven_out_of_ten_textview"
        android:padding="20dp"
        android:text="@string/question7"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/indication_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/question_textview"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/datalatin"
        android:text="@string/indication"
        android:textColor="#D50000"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/indication_textview"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="20dp">


        <CheckBox
            android:id="@+id/question7_option1_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/a7"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/question7_option2_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/b7"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/question7_option3_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/c7"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:background="#F44336"
        android:fontFamily="@font/datalatin"
        android:onClick="onClick"
        android:text="@string/next"
        android:textSize="20sp" />
</RelativeLayout>