<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.javaquiz.tenth_question">

    <TextView
        android:id="@+id/ten_out_of_ten_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/datalatin"
        android:padding="30dp"
        android:text="@string/q10"
        android:textAlignment="center"
        android:textColor="#D50000"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/question_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ten_out_of_ten_textview"
        android:padding="20dp"
        android:text="@string/question10"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/answer_editext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/question_textview"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="30dp"
        android:inputType="numberDecimal"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:background="#F44336"
        android:fontFamily="@font/datalatin"
        android:onClick="onClick"
        android:text="@string/finish"
        android:textSize="20sp" />

</RelativeLayout>